<resources>
    <string name="app_name">Skripsi</string>
    <string name="perusahaan">Perusahaan Asuransi</string>
    <string-array name="planHealth">
        <item>RI 150</item>
        <item>RI 300</item>
        <item>RI 400</item>
        <item>RI 500</item>
    </string-array>
    <string-array name="planTravel">
        <item>VIP</item>
        <item>Executive</item>
        <item>Deluxe</item>
        <item>Superior</item>
    </string-array>
    <string name="apabila_mengalami_keadaan_darurat_silahkan_menghubungi_kontak_pihak_asuransi_yang_terdaftar">Apabila mengalami keadaan darurat, silahkan menghubungi kontak pihak asuransi yang terdaftar:</string>
    <string name="daftar_asuransi">Daftar Asuransi</string>
    <string name="icon_3">Icon 3</string>
    <string name="riwayat_pembayaran">Riwayat Pembayaran</string>
    <string name="icon_2">Icon 2</string>
    <string name="bayar_premi">Bayar Premi</string>
    <string name="icon_1">Icon 1</string>
    <string name="anda_belum_memiliki_password_buat_password_sekarang_untuk_mengakses_data_asuransi_disini">Anda belum memiliki password! Buat password sekarang</string>
    <string name="selamat_datang">Selamat datang</string>
    <string name="nama_perusahaan_asuransi">Nama Perusahaan : </string>
    <string name="nama_contact_person">Nama Contact Person : </string>
    <string name="no_telp_asuransi">No. Telp : </string>
    <string name="daftar_rumah_sakit_rekanan">Daftar Rumah Sakit Rekanan</string>
    <string name="rumah_sakit_a_nno_telp_nlink_gmap">Rumah Sakit A\nNo. Telp:\nLink gmap:</string>
    <string name="informasi_umum">Informasi Umum</string>
    <string name="asuransi_kesehatan_n_menanggung_biaya_rumah_sakit_dan_pengobatan_n_perlindungan_terhadap_penyakit_kritis_n_fasilitas_rawat_jalan_dan_rawat_inap_n_jaringan_rumah_sakit_luas_untuk_kenyamanan_anda">Asuransi Kesehatan:\n✔ Menanggung biaya rumah sakit dan pengobatan\n✔ Perlindungan terhadap penyakit kritis\n✔ Fasilitas rawat jalan dan rawat inap\n✔ Jaringan rumah sakit luas untuk kenyamanan Anda</string>
    <string name="asuransi_travel_n_perlindungan_terhadap_pembatalan_penerbangan_n_pertanggungan_biaya_pengobatan_di_luar_negeri_n_kompensasi_untuk_kehilangan_bagasi_n_bantuan_darurat_24_7_selama_perjalanan">Asuransi Travel:\n✔ Perlindungan terhadap pembatalan penerbangan\n✔ Pertanggungan biaya pengobatan di luar negeri\n✔ Kompensasi untuk kehilangan bagasi\n✔ Bantuan darurat 24/7 selama perjalanan</string>
    <string name="warning_icon">!</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="info_asuransi">Info Asuransi</string>
    <string name="waktu">TANGGAL\nWAKTU</string>
    <string name="profil">Profil</string>
    <string name="utama">Utama</string>
    <string name="riwayat_medis">Riwayat Medis</string>
    <string name="health_sisa_limit">HEALTH - Sisa Limit:</string>
    <string name="tgl_pengajuan">Tgl. Pengajuan</string>
    <string name="status">Status</string>
    <string name="klaim">Klaim</string>
    <string name="travel_sisa_limit">TRAVEL - Sisa Limit:</string>
    <string name="faq">FAQ</string>
    <string name="ubah_bahasa">Ubah Bahasa</string>
    <string name="ubah_kata_sandi">Ubah kata sandi</string>
    <string name="pengaturan">PENGATURAN</string>
    <string name="no_telp">NO. TELP:</string>
    <string name="email">EMAIL:</string>
    <string name="nama">NAMA:</string>
    <string name="keluar">Keluar</string>
    <string name="syarat_dan_ketentuan">Syarat dan ketentuan</string>
    <string name="email_perusahaan">Email:</string>
    <string name="username_perusahaan">Username:</string>
    <string name="nama_perusahaan">Nama Perusahaan:</string>
    <string name="virtual_account">Virtual Account:</string>
    <string name="profile">PROFILE</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="ubah">Ubah</string>
    <string name="ubah_password">UBAH PASSWORD</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nomor_telp">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="iya">Iya</string>
    <string name="tidak">Tidak</string>
    <string name="negara_tujuan">Negara Tujuan</string>
    <string name="tujuan_perjalanan">Tujuan Perjalanan</string>
    <string name="daftar">DAFTAR</string>
    <string name="lanjut">LANJUT</string>
    <string name="registrasi">REGISTRASI</string>
    <string name="tipe_asuransi">Tipe Asuransi</string>
    <string name="masuk">MASUK</string>
    <string name="daftarkan_sekarang"><u>Daftarkan sekarang</u></string>
    <string name="nama_huruf_kecil">Nama</string>
    <string name="jenis_polis">Jenis Polis: </string>
    <string name="plan_asuransi">Plan Asuransi</string>
    <string name="masa_perjalanan">Masa Perjalanan</string>
    <string name="title_activity_pop_up_ubah_bahasa">pop_up_ubah_bahasa</string>
    <string name="masukkan_besar_premi">MASUKKAN BESAR PREMI</string>
    <string name="masukkan_nomor_polis">MASUKKAN NOMOR POLIS</string>
    <string name="silakan_masukan_password_anda">Silakan Masukan Password Anda</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="klik_disini"><u>Klik Disini</u></string>
    <string name="ubah_bahasa_popup">UBAH BAHASA</string>
    <string name="lupa_password_klik_disini"><u>Lupa Password? Klik Disini</u></string>
    <string name="silakan_masukkan_password_anda">Silakan Masukkan Password Anda</string>
    <string name="ok">OK</string>
    <string name="syarat_dan_ketentuan_title">SYARAT DAN KETENTUAN</string>
    <string name="dengan_mengunduh_dan_menggunakan_aplikasi_ini_anda_setuju_untuk_mematuhi_syarat_dan_ketentuan_berikut">Dengan mengunduh dan menggunakan aplikasi ini, Anda setuju untuk mematuhi syarat dan ketentuan berikut:</string>
    <string name="pendaftaran_dan_akun">Pendaftaran dan Akun</string>
    <string name="pengguna_wajib_memberikan_data_yang_benar_akurat_dan_terkini_saat_melakukan_pendaftaran_n_pengguna_bertanggung_jawab_menjaga_kerahasiaan_akun_dan_kata_sandi_mereka">- Pengguna wajib memberikan data yang benar, akurat, dan terkini saat melakukan pendaftaran.\n - Pengguna bertanggung jawab menjaga kerahasiaan akun dan kata sandi mereka.</string>
    <string name="aplikasi_ini_hanya_dapat_digunakan_sesuai_dengan_ketentuan_yang_berlaku_dan_tidak_untuk_tujuan_yang_melanggar_hukum_n_setiap_bentuk_penyalahgunaan_aplikasi_akan_mengakibatkan_penghentian_akses_secara_sepihak">- Aplikasi ini hanya dapat digunakan sesuai dengan ketentuan yang berlaku dan tidak untuk tujuan yang melanggar hukum.\n - Setiap bentuk penyalahgunaan aplikasi akan mengakibatkan penghentian akses secara sepihak.</string>
    <string name="informasi_polis_dan_layanan">Informasi Polis dan Layanan</string>
    <string name="informasi_yang_ditampilkan_pada_aplikasi_mengacu_pada_data_polis_asuransi_yang_tercatat_di_sistem_perusahaan_n_perusahaan_berhak_memperbarui_atau_mengubah_informasi_layanan_tanpa_pemberitahuan_sebelumnya">- Informasi yang ditampilkan pada aplikasi mengacu pada data polis asuransi yang tercatat di sistem perusahaan.\n - Perusahaan berhak memperbarui atau mengubah informasi layanan tanpa pemberitahuan sebelumnya.</string>
    <string name="klaim_dan_pembayaran">Klaim dan Pembayaran</string>
    <string name="semua_klaim_dan_pembayaran_premi_dilakukan_sesuai_prosedur_yang_tercantum_dalam_polis_asuransi_masing_masing_n_perusahaan_berhak_menolak_klaim_yang_tidak_memenuhi_persyaratan">- Semua klaim dan pembayaran premi dilakukan sesuai prosedur yang tercantum dalam polis asuransi masing-masing.\n - Perusahaan berhak menolak klaim yang tidak memenuhi persyaratan.</string>
    <string name="privasi_dan_keamanan_data">Privasi dan Keamanan Data</string>
    <string name="perusahaan_berkomitmen_untuk_melindungi_data_pribadi_pengguna_sesuai_dengan_peraturan_yang_berlaku_n_data_pengguna_tidak_akan_dibagikan_kepada_pihak_ketiga_tanpa_persetujuan_pengguna_kecuali_diwajibkan_oleh_hukum">- Perusahaan berkomitmen untuk melindungi data pribadi pengguna sesuai dengan peraturan yang berlaku.\n - Data pengguna tidak akan dibagikan kepada pihak ketiga tanpa persetujuan pengguna, kecuali diwajibkan oleh hukum.</string>
    <string name="frequently_asked_questions">FREQUENTLY ASKED QUESTIONS</string>
    <string name="q1">Bagaimana mencari rumah sakit rekanan melalui aplikasi ?</string>
    <string name="a1">Daftar rumah sakit rekanan dapat ditemukan pada menu utama</string>
    <string name="q2">Bagaimana cara melihat detail polis saya di aplikasi ?</string>
    <string name="a2">Pengguna dapat membuka halaman Informasi Asuransi dengan menginput password terlebih dahulu</string>
    <string name="q3">Apa yang harus dilakukan jika lupa password ?</string>
    <string name="a3">Pengguna dapat melakukan perubahan password melalui dua cara: \n- Klik tombol Lupa passworddi halaman login \n- Klik Ubah password di halaman profile</string>
    <string name="q4">Apa yang dimaksud dengan limit asuransi ?</string>
    <string name="a4">Limit asuransi adalah batas maksimal biaya yang ditanggung oleh perusahaan asuransi sesuai dengan ketentuan pada polis</string>
    <string name="nik_login">NIK</string>
    <string name="silakan_masukkan_riwayat_penyakit_yang_dimiliki">Silakan Masukkan Riwayat Penyakit Yang Dimiliki</string>
    <string name="hypertensi">HYPERTENSI</string>
    <string name="jantung_dan_pembuluh_darah">JANTUNG DAN PEMBULUH DARAH</string>
    <string name="tbc">TBC</string>
    <string name="tukak_lambung">TUKAK LAMBUNG</string>
    <string name="batu_dan_infeksi_saluran_kemih">BATU DAN INFEKSI SALURAN KEMIH</string>
    <string name="anal_fistula">ANAL FISTULA</string>
    <string name="radang_kandung_dan_batu_empedu">RADANG KANDUNG DAN BATU EMPEDU</string>
    <string name="jari_tangan_dan_kaki_yang_berjumlah_lebih">JARI TANGAN DAN KAKI YANG BERJUMLAH LEBIH</string>
    <string name="tumor_yang_tampak_dan_tidak_tampak">TUMOR YANG TAMPAK DAN TIDAK TAMPAK</string>
    <string name="diabetes_mellitus">DIABETES MELLITUS</string>
    <string name="endometriosis">ENDOMETRIOSIS</string>
    <string name="wasir_atau_ambeien">WASIR ATAU AMBEIEN</string>
    <string name="operasi_amandel">OPERASI AMANDEL</string>
    <string name="operasi_nasal_septum_sekat_rongga_hidung">OPERASI NASAL SEPTUM / SEKAT RONGGA HIDUNG</string>
    <string name="gondok">GONDOK</string>
    <string name="katarak">KATARAK</string>
    <string name="sinus">SINUS</string>
    <string name="epilepsi">EPILEPSI</string>
    <string name="simpan">Simpan</string>
    <string name="input_nik">Input NIK</string>
    <string name="input_nama">Input Nama</string>
    <string name="email_registasi">Email</string>
    <string name="input_email">Input Email</string>
    <string name="input_nomor_telepon">Input Nomor Telepon</string>
    <string name="input_alamat">Input Alamat</string>
    <string name="nama_ahli_waris_registrasi">Nama Ahli Waris</string>
    <string name="hubungan_dengan_ahli_waris_registrasi">Hubungan Dengan Ahli Waris</string>
    <string name="input_hubungan_dengan_ahli_waris">Input Hubungan Dengan Ahli Waris</string>
    <string name="input_ahli_waris">Input Ahli Waris</string>
    <string name="individual">Individual</string>
    <string name="family">Family</string>
    <string name="nama_keluarga">Nama Keluarga</string>
    <string name="input_nama_keluarga">Input Nama Keluarga</string>
    <string name="tipe_polis_tahunan_travel">Tipe Polis - Tahunan</string>
    <string name="input_tujuan_perjalanan">Input Tujuan Perjalanan</string>
    <string name="input_negara_tujuan">Input Negara Tujuan</string>
    <string name="TRAVEL">TRAVEL</string>
</resources>