<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopUpRiwayatPenyakit"
    android:background="#27374D">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="50dp"
        >

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_background"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/silakan_masukkan_riwayat_penyakit_yang_dimiliki"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tbc"
                android:textColor="@color/black"
                android:id="@+id/c1"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hypertensi"
                android:textColor="@color/black"
                android:id="@+id/c2"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jantung_dan_pembuluh_darah"
                android:textColor="@color/black"
                android:id="@+id/c3"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tukak_lambung"
                android:textColor="@color/black"
                android:id="@+id/c4"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/batu_dan_infeksi_saluran_kemih"
                android:textColor="@color/black"
                android:id="@+id/c5"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anal_fistula"
                android:textColor="@color/black"
                android:id="@+id/c6"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radang_kandung_dan_batu_empedu"
                android:textColor="@color/black"
                android:id="@+id/c7"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jari_tangan_dan_kaki_yang_berjumlah_lebih"
                android:textColor="@color/black"
                android:id="@+id/c8"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tumor_yang_tampak_dan_tidak_tampak"
                android:textColor="@color/black"
                android:id="@+id/c9"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_mellitus"
                android:textColor="@color/black"
                android:id="@+id/c10"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endometriosis"
                android:textColor="@color/black"
                android:id="@+id/c11"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wasir_atau_ambeien"
                android:textColor="@color/black"
                android:id="@+id/c12"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operasi_amandel"
                android:textColor="@color/black"
                android:id="@+id/c13"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operasi_nasal_septum_sekat_rongga_hidung"
                android:textColor="@color/black"
                android:id="@+id/c14"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gondok"
                android:textColor="@color/black"
                android:id="@+id/c15"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/katarak"
                android:textColor="@color/black"
                android:id="@+id/c16"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sinus"
                android:textColor="@color/black"
                android:id="@+id/c17"
                android:onClick="checked"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/epilepsi"
                android:textColor="@color/black"
                android:id="@+id/c18"
                android:onClick="checked"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:background="@drawable/rounded_corner_button"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:id="@+id/btnSimpan"
                />

        </LinearLayout>


    </LinearLayout>



</ScrollView>