<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrasiTravel"
    android:background="#27374D"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="50dp"
        android:layout_marginHorizontal="40sp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_background"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/TRAVEL"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

<!--    NIK -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/nik_login"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/nik"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corner_fill"
            android:hint="@string/input_nik"
            android:textSize="12dp"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            />

<!--    Nama -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/nama_huruf_kecil"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corner_fill"
            android:hint="@string/input_nama"
            android:textSize="12dp"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            />

<!--    Email -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/email_registasi"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corner_fill"
            android:hint="@string/input_email"
            android:textSize="12dp"
            android:paddingLeft="8dp"
            android:textColor="@color/black"/>


<!--    Jenis Kelamin -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/jenis_kelamin"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/jenisKelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/laki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/laki"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/perempuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perempuan"
                android:textColor="@color/black" />
        </RadioGroup>

<!--    No Telepon -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/nomor_telp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/noTelp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corner_fill"
            android:hint="@string/input_nomor_telepon"
            android:textSize="12dp"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            />

<!--    Alamat -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/alamat"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corner_fill"
            android:hint="@string/input_alamat"
            android:textSize="12dp"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            />

<!--    Jenis Polis -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/jenis_polis"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/jenisPolis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/individu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/individual"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family"
                android:textColor="@color/black" />
        </RadioGroup>

<!--    Nama Keluarga -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/namaKeluargaAll"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/nama_keluarga"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/namaKeluarga"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/rounded_corner_fill"
                android:hint="@string/input_nama_keluarga"
                android:textSize="12dp"
                android:paddingLeft="8dp"
                />
        </LinearLayout>


<!--    Plan Asuransi -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/plan_asuransi"
            android:textColor="@color/black" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_fill"
            android:paddingVertical="5dp"
            android:layout_marginVertical="8dp"
            android:id="@+id/plan"
            />

<!--    Masa Perjalanan -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masa_perjalanan"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/rounded_corner_fill"
                android:id="@+id/masaPerjalanan"
                android:textSize="12dp"
                android:paddingLeft="8dp"
                android:hint="DD/MM/YYYY - DD/MM/YYYY"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/calendar"
                android:layout_alignParentRight="true"
                android:layout_marginTop="7dp"
                android:layout_marginRight="8dp"
                android:id="@+id/btnMasaPerjalanan"
                />

        </RelativeLayout>



<!--    Tipe Polis -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipe_polis_tahunan_travel"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            />

        <RadioGroup
            android:id="@+id/tipePolis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/iya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/iya"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/tidak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tidak"
                android:textColor="@color/black" />
        </RadioGroup>


<!--    Nama Ahli Waris -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_ahli_waris_registrasi"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corner_fill"
            android:id="@+id/namaAhliWaris"
            android:hint="@string/input_ahli_waris"
            android:textSize="12dp"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            />

<!--    Hubungan Dengan Ahli Waris -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hubungan_dengan_ahli_waris_registrasi"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corner_fill"
            android:id="@+id/hubunganDenganAhliWaris"
            android:hint="@string/input_hubungan_dengan_ahli_waris"
            android:textSize="12dp"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            />

<!--    Negara Tujuan -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/negara_tujuan"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corner_fill"
            android:id="@+id/negaraTujuan"
            android:hint="@string/input_negara_tujuan"
            android:textSize="12dp"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            />

<!--    Tujuan Perjalanan -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tujuan_perjalanan"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corner_fill"
            android:id="@+id/tujuanPerjalanan"
            android:layout_marginBottom="20dp"
            android:hint="@string/input_tujuan_perjalanan"
            android:textSize="12dp"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            />

<!--    Button Daftar -->
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:background="@drawable/rounded_corner_button"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:id="@+id/btnDaftar"
            />

    </LinearLayout>

    </LinearLayout>

</ScrollView>